# Qwen_ASR

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  docker-compose.yml  multi-angle-review-report.md  spec-review-report.md
.claude/rules/: shell-script-exec-bit.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase1_initial.py  0002_hotword_dataset.py  0003_finetune.py  0004_youtube_correction.py  0005_correction_segments_add_speaker_label_and_is_skipped.py  0006_correction_session_cascade_on_transcription.py  0007_audio_files_set_null_on_transcription_delete.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  idempotency.py  logging.py  response.py  security.py  startup_checks.py
backend/app/middleware/: __init__.py  error_handler.py  idempotency.py  prometheus.py  rate_limit.py  request_id.py  tracing.py
backend/app/models/: __init__.py  api_key.py  audio_file.py  audit_log.py  base.py  correction.py  dataset.py  finetune.py  hotword.py  transcription.py  youtube.py
backend/app/repositories/: api_key.py  audio_file.py  base.py  correction.py  dataset.py  finetune.py  hotword.py  transcription.py  youtube.py
backend/app/routers/: asr.py  audio.py  correction.py  dataset.py  finetune.py  health.py  hotword.py  ws.py  youtube.py
backend/app/schemas/: asr.py  common.py  correction.py  dataset.py  finetune.py  hotword.py  youtube.py
backend/app/services/: audit.py  bootstrap.py
backend/app/services/aligner/: __init__.py  _loader.py  service.py
backend/app/services/asr/: __init__.py  consumer.py  engine.py  queue.py  transcriber.py
backend/app/services/audio/: __init__.py  _firered_vad_loader.py  mime.py  path_guard.py  resampler.py  storage.py  vad.py
backend/app/services/correction/: __init__.py  excel_exporter.py  exporter.py  homophone.py  jsonl_exporter.py  kenlm_corrector.py  llm.py  nec.py  pipeline.py  quality_evaluator.py  session_builder.py
backend/app/services/dataset/: __init__.py  quality.py  sample_processor.py
backend/app/services/diarization/: __init__.py  _campp.py  _pyannote.py  service.py
backend/app/services/finetune/: __init__.py  data_augmentation.py  lock.py  runner.py  state_machine.py
backend/app/services/hotword/: __init__.py  dispatcher.py  strategies.py
backend/app/services/post_processing/: __init__.py  numbers.py  pipeline.py  punctuation.py  s2t.py  taiwan_overrides.py
backend/app/services/ws_quality/: __init__.py  auth.py  heartbeat.py  manager.py  streaming.py
backend/app/services/youtube/: __init__.py  downloader.py  url_validator.py
backend/scripts/: entrypoint.sh  finetune_runner.py  generate_audio_fixtures.py  smoke_asr.sh
backend/tests/: conftest.py
backend/tests/fixtures/audio/: README.md
backend/tests/integration/: test_app.py  test_asr_gpu_smoke.py  test_asr_transcribe.py  test_audio_pipeline.py  test_auth.py  test_bootstrap.py  test_correction_router.py  test_dataset_router.py  test_finetune_isolation.py  test_finetune_router.py  test_health.py  test_hotword_router.py  test_repositories.py  test_transcriber_full_pipeline.py  test_ws_quality.py  test_youtube_router.py
backend/tests/migrations/: conftest.py  test_correction_speaker_skip.py
backend/tests/routers/: test_audio_stream.py  test_correction_create.py  test_correction_delete.py  test_correction_exports.py  test_correction_sessions_list.py  test_transcription_delete.py
backend/tests/services/correction/: conftest.py  test_excel_exporter.py  test_jsonl_exporter.py  test_quality_evaluator.py
backend/tests/unit/: test_aligner.py  test_asr_consumer.py  test_asr_engine.py  test_asr_queue.py  test_asr_transcriber.py  test_audio_mime.py  test_audio_resampler.py  test_audio_storage.py  test_audio_vad.py  test_config.py  test_correction_pipeline.py  test_diarization.py  test_exceptions.py  test_finetune_state_machine.py  test_hotword_dispatcher.py  test_idempotency.py  test_logging.py  test_main_lifespan_aligner.py  test_middleware_noop.py  test_models.py  test_path_guard.py  test_post_processing.py  test_pyproject_extras.py  test_response.py  test_security.py  test_session_builder.py  test_startup_checks.py  test_streaming_hook.py  test_ws_auth.py  test_ws_heartbeat.py  test_ws_manager.py  test_youtube_url_validator.py
docs/superpowers/plans/: 2026-05-16-phase1-m1-infrastructure.md  2026-05-16-phase1-m2-backend-skeleton.md  2026-05-16-phase1-m3-preprocessing.md  2026-05-16-phase1-m4-asr-engine.md  2026-05-16-phase2-m10-websocket-quality.md  2026-05-16-phase2-m11-observability-security.md  2026-05-16-phase2-m5-hotword-dataset.md  2026-05-16-phase2-m6-frontend-scaffolding.md  2026-05-16-phase2-m7-aligner-diarization-correction.md  2026-05-16-phase2-m8-finetune.md  2026-05-16-phase2-m9-youtube-correction.md
docs/superpowers/specs/: 2026-05-11-qwen3-asr-platform-design.md  2026-05-16-phase1-implementation-design.md  2026-05-16-phase2-implementation-design.md
frontend/: .env.example  .gitignore  Dockerfile  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/__mocks__/: idb-keyval.ts  wavesurfer.js.ts
frontend/__mocks__/@wavesurfer/: react.tsx
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/correction/: page.tsx
frontend/app/history/: page.tsx
frontend/app/keys/: page.tsx
frontend/app/youtube/: page.tsx
frontend/components/asr/: AudioPlayer.tsx  AudioUploader.tsx  ExportButtons.tsx  TranscriptViewer.tsx  TranscriptionResult.tsx
frontend/components/auth/: AuthProvider.tsx  useAuth.ts
frontend/components/correction/: SegmentEditor.tsx  (+2 more)
frontend/hooks/: useAudioPlayer.ts  useCorrectionAudio.ts  useCorrectionSession.ts  useCorrectionShortcuts.ts  useDebouncedSave.ts  useThrottledValue.ts  useVirtualList.ts
frontend/lib/: config.ts  uuid.ts
frontend/scripts/: generate-api.ts
frontend/stores/: correctionStore.ts
postgres/: Dockerfile  init.sql
scripts/: check_response_envelope.py
(+73 files in other folders)
