[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "qwen-asr-backend"
version = "0.1.0"
description = "Qwen3-ASR 離線語音辨識平台 — 後端"
requires-python = ">=3.12"
readme = { content-type = "text/markdown", text = "Backend for Qwen3-ASR platform. See docs/superpowers/specs/." }

dependencies = [
  # 核心框架（M2 起使用，先列依賴避免 M2 重複改動）
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "argon2-cffi>=23.1.0",
  "structlog>=24.4.0",
  "python-multipart>=0.0.17",
  # 預處理依賴（M3 起使用）
  "python-magic>=0.4.27",
  "torch>=2.4.0",
  "torchaudio>=2.4.0",
  "soxr>=0.5.0",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "testcontainers[postgres]>=4.8.0",
  "factory-boy>=3.3.1",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]
gpu = [
  # vLLM 與 GPU 推理（M4 起使用）；CPU CI 不安裝
  "vllm>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------- Ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",      # pycodestyle
  "F",            # pyflakes
  "I",            # isort
  "B",            # flake8-bugbear
  "UP",           # pyupgrade
  "ASYNC",        # flake8-async
  "S",            # flake8-bandit
  "RUF",          # ruff-specific
]
ignore = [
  "S101",     # pytest 內使用 assert
  "RUF001",   # 中文字串內全形標點（繁體中文專案合理排除）
  "RUF002",   # 中文 docstring 內全形標點（繁體中文專案合理排除）
  "RUF003",   # 中文註解內全形標點（繁體中文專案合理排除）
  "UP046",    # Pydantic BaseModel 尚不支援 PEP 695 新式 Generic 語法
  "UP047",    # 同上，Generic 函式暫保留 TypeVar 寫法
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S311"]  # 測試中允許 hardcoded password、隨機
"app/deps/*.py" = ["B008"]  # FastAPI Depends/Header 在函式預設值是框架慣用語

# ---------------- mypy ----------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
files = ["app"]

[[tool.mypy.overrides]]
module = ["torchaudio.*", "soxr.*", "soundfile.*", "magic.*", "vllm.*", "argon2.*"]
ignore_missing_imports = true

# ---------------- pytest ----------------
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not gpu and not phase2' --strict-markers -ra"
markers = [
  "gpu: 需要真實 GPU 環境（CI 跳過）",
  "slow: 執行 > 5 秒",
  "phase2: Phase 2 才啟用的 placeholder 測試",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
